...
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="64dp"

        />
    <TextView
        android:id="@+id/tvLogInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleMelodies"
        app:layout_constraintStart_toStartOf="parent"
...
        android:textStyle="bold"
        android:text="@string/log_in_title"

    />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/layout_user_id"
        android:layout_marginTop="40dp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/nickname_title"
        app:layout_constraintTop_toBottomOf="@+id/tvLogInTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/md_theme_primary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnEnterPreviousAccount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_user_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
...
