...
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/cardUserId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogOut"
        app:cardElevation="6dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
...
