...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_folder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/folder_title"
        android:textColor="@color/md_theme_onSurfaceVariant"
        android:background="@color/md_theme_outlineVariant"

...
